app fully functional; update to js, styles, html

--- a/index.html
+++ b/index.html
@@ -20,20 +20,19 @@
             <div class="sub-container">
                 <form id="quiz-form">
                     <div class="answers">
-                        <!--<input type="radio" name="answers" id="a1"></input>
-                        <label for="a1" class="a1">Kuala Lumpur</label><br />
-                        <input type="radio" name="answers" id="a2"></input>
-                        <label for="a2" class="a2">Jakarta</label><br />
-                        <input type="radio" name="answers" id="a3"></input>
-                        <label for="a3" class="a3">Bogota</label><br />
-                        <input type="radio" name="answers" id="a4"></input>
-                        <label for="a4" class="a4">Cape Town</label>-->
+                        <!-- placeholder -->
                     </div>
+
                     <div class="button">
                         <button type="submit" class="submitBtn">start</button>
-                        <button type="button" class="nextBtn" disabled>next</button>
+                        <!--<button type="button" class="nextBtn" disabled>next</button>-->
                     </div>
+
                 </form>
+
+                <div class="display-answer-container">
+                    <span class="display-answer"></span>
+                </div>
             </div>
         </main>
         <footer>
