final push; code cleanup and fully commented; backgrond color added

--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Thinkful Quiz Game</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Thinkful jQuery Quiz Game</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -19,11 +16,12 @@
         <main>
             <div class="sub-container">
                 <form id="quiz-form">
+
                     <div class="answers">
-                        <!-- placeholder -->
+                        <!-- radio buttons placeholder -->
                     </div>
 
-                    <div class="button">
+                    <div class="submit-button-container">
                         <button type="submit" class="submitBtn">start</button>
                         <!--<button type="button" class="nextBtn" disabled>next</button>-->
                     </div>
@@ -46,8 +44,10 @@
         </footer>
     </div>
 
+    <!-- calling js and jquery -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="app.js"></script>
+
 </body>
 
 </html>
